--- a/FlipFlop/css/style.css
+++ b/FlipFlop/css/style.css
@@ -1,10 +1,461 @@
-@keyframes backgroundflash {    
-    75% { opacity:1.0}
-    100% {opacity:0.0; display:none}
+body {
+    font: 14px Helvetica;
+    background: #999999;
+    margin-top: 0px;
+    border: 5px solid white;
+    margin-left: auto;
+    margin-right: auto;
+    height: 100%;
+    display: flex;
+    box-shadow: 7px 7px 6px rgba(12, 12, 12, 0.8);
+
+
+    /* all blocks are placed in a row direction, but in mobile layout, each is
+    full-length across main direction, so they will wrap (see in column) */
+    flex-flow: row wrap;
 }
 
-#flash {
-  background-color:green;
-  animation: backgroundflash 5s forwards; 
+header {
+    order: 1;
+}
+
+#mainnavigation {
+    background-color: lightgrey;
+    order: 2;
+}
+
+#maincontent {
+    background-color: #ff1d17;
+    order: 3;
+}
+
+#news {
+    background-color: lightgrey;
+    order: 4;
+}
+
+header, footer {
+    background-color: black;
+    color: white;
+}
+
+footer {
+    order: 5;
+}
+
+.text {
+    font-family: comic-sans;
+    font-style: oblique;
+    text-align: center;
+    color: black;
+    word-wrap: break-word;
+    overflow-y: hidden;
+}
+
+.light-border {
+    border: 1px solid black;
+    border-radius: 15px;
+}
+
+.button {
+    width: 300px;
+    height: auto;
+    float: right;
+    margin: 1%;
+}
+
+.button-text {
+    font-size: 26px;
+}
+
+.chat-tab {
+    position: relative;
+    display: table;
+    width: 10%;
+    height: 90%;
+    background-color: silver;
+}
+
+.chat-tab .text {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+A:link {text-decoration:none}
+A:visited {text-decoration:none}
+
+/* mobile layout: single colum, all items occupy the entire row, so wrap */
+header, #news, #maincontent, #mainnavigation, footer , .title, .login, .content{
+    flex-basis: 100%;
+}
+
+body{
+    background-color: #4a70c8;
+}
+
+.title {
+    position: relative;
+    height: 100px;
+    background-color: #2956bd;
+    float: left;
+    flex-flow: row wrap;
+    font-size: 50px;
+}
+
+.logo {
+    position: relative;
+    height: 100px;
+    background-color: #2956bd;
+    float: left;
+}
+
+.login {
+    position: relative;
+    height: 100px;
+    background-color: #2956bd;
+    float: left;
+    flex-flow: row wrap;
+}
+
+.login-input {
+    background-color: white;
+    margin: 2%;
+    border: 2px solid white;
+    box-shadow: 1px;
+    border-radius: 5px;
+}
+
+.input {
+    text-align: center;
+    border: medium none transparent;
+    background-color: white;
+}
+
+.content {
+    position: relative;
+    height: 100%;
+    background-color: white;
+}
+
+.product {
+    width: 47.2%;
+    min-width: 200px;
+    margin: 1%;
+    box-shadow: 2px 2px 3px rgba(28, 44, 44, 0.1);
+}
+
+.product {
+    position: relative;
+    border: 1px solid black;
+    border-radius: 25px 8px;
+    float: left;
+    height: auto;
+}
+
+.p-img {
+    margin: 5% 5% 1% 5%;
+    width: 90%;
+    height: auto;
+}
+
+.img-list {
+    margin: 1%;
+    width: 40%;
+    height: auto;
+    float: left;
+}
+
+.sub-img-box {
+    margin: 1%;
+    height: auto;
+}
+
+.sub-img {
+    width: 30%;
+}
+
+.d-img {
+    width: 100%;
+    height: auto;
+}
+
+.des-head {
+    width: 57%;
+    float: left;
+    margin: 5% 0 5% 0;
+}
+
+.search {
+    width: 80%;
+    float: left;
+}
+
+#search-box {
+    width: 80%;
+    margin: 1%;
+    height: 50px;
+    padding: 5px;
+    background-color: #ff533d;
+}
+
+.up-button {
+    width: 5%;
+    height: 100%;
+    text-decoration: none;
+}
+
+.chat-buttom {
+    display: flex;
+    width: 20%;
+}
+
+.p-title {
+    width: 71%;
+    padding: 1%;
+    margin: 1%;
+    height: 11%;
+    align-content: center;
+    float: left;
+    font-size: 19px;
+}
+
+.p-price {
+    width: 18%;
+    float: left;
+    max-height: 11%;
+    margin: 1% 4% 1% 0;
+    padding: 1%;
+}
+
+.p-text {
+    display: none;
+    padding: 1%;
+    font-size: 12px;
+    width: 96%;
+    margin: 1%;
+    height: 13%;
+}
+
+.login {
+    position: relative;
+    height: 100px;
+    background-color: #46ff4a;
+    float: left;
+    flex-flow: row wrap;
+}
+
+.l_button {
+    position: relative;
+    margin: 1% 0% 0% 7%;
+    color: black;
+    border: 2px solid white;
+    background-color: #ff533d;
+    border-radius: 5px;
+    width: 40%;
+}
+
+.footer {
+    position: absolute;
+    display: none;
+}
+
+.foot {
+    height: 30px;
+    background-color: #ff533d;
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    opacity: 0.8;
+    /*border-radius: 10px 10px 0 0;*/
+}
+
+/* Small devices (tablets, 768px and up) */
+/* container width: 750 */
+@media (min-width: 768px) {
+    body {
+        width: 750px;
+    }
+
+    .title {
+        flex-basis: 68%;
+    }
+
+    .login {
+        flex-basis: 32%;
+        background-color: #2956bd;
+    }
+
+    .logo{
+        background-color: #2956bd;
+    }
+
+    .content {
+
+    }
+
+    .product {
+        height: 350px;
+    }
+
+    .p-img {
+        width: 90%;
+        height: 68%;
+    }
+
+    #search-box {
+        width: 80%;
+        margin: 1% 5% 1% 5%;
+    }
+
+    .p-title {
+        height: 6%;
+    }
+
+    .p-price {
+        max-height: 6%;
+    }
+
+    .p-text {
+        height: 11%;
+        display: flex;
+    }
+
+}
+
+/* Medium devices (desktops, 992px and up) */
+/* container width: 970 */
+@media (min-width: 992px) {
+    body {
+        width: 970px;
+        background-color: #4a70c8;
+    }
+
+    /* article and nav will share the same row */
+    #maincontent {
+        flex-basis: 70%;
+    }
+    #mainnavigation {
+
+    }
+
+    .product {
+        width: 31%;
+        height: 321px;
+    }
+
+    .logo {
+        flex-basis: 15%;
+        background: url("../img/logo2.png");
+        background-color: #2956bd;
+    }
+
+    .title {
+        flex-basis: 60%;
+    }
+
+    .login {
+        flex-basis: 25%;
+    }
+
+    .p-img {
+        width: 90%;
+        height: 67%;
+    }
+
+    .search {
+        width: 100%;
+    }
+
+    .chat-buttom {
+        display: none;
+    }
+
+    #search-box {
+        width: 80%;
+        margin: 1% 10% 1% 10%;
+    }
+
+    .p-title {
+        height: 6%;
+    }
+
+    .p-price {
+        max-height: 6%;
+    }
+
+    .p-text {
+        display: flex;
+        height: 12%;
+    }
+
+    .footer {
+        display: flex;
+    }
+}
+
+/* Large devices (large desktops, 1200px and up) */
+/* container width: 1170px */
+@media (min-width: 1200px) {
+    body {
+        width: 1170px;
+        background-color: #4a70c8;
+    }
+
+    /* article, nav and aside will share the same row */
+    #maincontent {
+        flex-basis: 60%;
+    }
+    #mainnavigation, #news {
+        flex-basis: 20%;
+    }
+
+    .title {
+        flex-basis: 60%;
+    }
+
+    .login {
+        flex-basis: 20%;
+    }
+
+    .logo {
+        flex-basis: 20%;
+        background: url("../img/logo1.png");
+        background-color: #2956bd;
+    }
+
+    .content {
+        position: relative;
+        height: 100%;
+        background-color: white;
+    }
+
+    .product {
+        height: 400px;
+        width: 22.83%;
+    }
+
+    .p-img {
+        width: 90%;
+        height: 45%;
+    }
+
+    .p-title {
+        height: 17%;
+    }
+
+    #search-box {
+        width: 80%;
+        margin: 1% 10% 1% 10%;
+    }
+
+    .p-text {
+        height: 27%;
+        display: flex;
+    }
+
+    .footer {
+        display: flex;
+    }
 }
 
