--- a/FlipFlop/css/modal.css
+++ b/FlipFlop/css/modal.css
@@ -1,35 +1,23 @@
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+.register-modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: #2956bd;
+    background-color: rgba(0,0,0,0.4);
 }
 
-.modal-content {
-    background-color: #b8d9fe;
-    margin: 15% auto; /* 15% from the top and centered */
+.register-content {
+    background-color: #2956bd;
+    margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
-}
-
-/* The Close Button */
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
+    width: 80%;
+    max-width: 500px;
+    border: solid 2px white;
+    border-radius: 30px;
 }
