chat- modal desing

--- a/FlipFlop/css/modal.css
+++ b/FlipFlop/css/modal.css
@@ -21,3 +21,69 @@
     border: solid 2px white;
     border-radius: 30px;
 }
+
+.chat-modal {
+    position: fixed;
+    z-index: 1;
+    bottom: 30px;
+    right: 0;
+    float: right;
+    max-height: 330px;
+    width: 25%;
+    height: 50%;
+    overflow: auto;
+    background-color: #2956bd;
+    background-color: rgba(0,0,0,0.4);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.chat-modal-tittle {
+    height: 9%;
+    text-align: center;
+    background-color: #797b99;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+    line-height: 1.7;
+}
+
+.chat-modal-content {
+    height: 84%;
+    margin: 1%;
+    padding: 1%;
+    background-color: #729992;
+    border-radius: 25px;
+}
+
+.chat-modal-input {
+    width: 96%;
+    height: 8%;
+    padding: 2%;
+}
+
+.chat-input {
+    height: 19px;
+    width: 100%;
+    text-align: center;
+    border: medium none transparent;
+    border-radius: 5px;
+    background-color: white;
+}
+
+.chat-self {
+    position: relative;
+    display: inline-block;
+    width: 96%;
+    text-align: left;
+    padding: 1%;
+    margin: 1%;
+}
+
+.chat-their {
+    position: relative;
+    display: inline-block;
+    width: 96%;
+    text-align: right;
+    padding: 1%;
+    margin: 1%;
+}
