--- a/FlipFlop/css/modal.css
+++ b/FlipFlop/css/modal.css
@@ -61,7 +61,7 @@
 .chat-modal-msg-content {
     max-height: 90%;
     margin: 0.5% 0;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .chat-modal-input {
@@ -72,7 +72,7 @@
 
 .chat-input {
     height: 19px;
-    width: 100%;
+    width: 99%;
     text-align: center;
     border: medium none transparent;
     border-radius: 5px;
